# oh-my-pi

./: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.robomp  Dockerfile.robomp.dockerignore  README.md  package.json
assets/: banner.html
docs/: ERRATA-GPT5-HARMONY.md  ai-schema-normalize.md  auth-broker-gateway.md  config-usage.md  custom-tools.md  environment-variables.md  extension-loading.md  extensions.md  fs-scan-cache-architecture.md  gemini-manifest-extensions.md  hooks.md  install-id.md  marketplace.md  mcp-config.md  mcp-server-tool-authoring.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-media-system-utils.md  natives-rust-task-cancellation.md  natives-shell-pty-process.md  natives-text-search-pipeline.md  notebook-tool-runtime.md  oh-my-gpt-harness-live-validation.md  oh-my-gpt-harness-stress-result.md  plugin-manager-installer-plumbing.md  porting-from-pi-mono.md  porting-to-natives.md  provider-streaming-internals.md  python-repl.md  render-mermaid.md  resolve-tool-runtime.md  rpc.md  rulebook-matching-pipeline.md  sdk.md  secrets.md  session-operations-export-share-fork-resume.md  session-switching-and-recent-listing.md  (+6 more)
python/omg-rpc/: README.md  pyproject.toml
python/omg-rpc/src/omg_rpc/: client.py
python/omg-rpc/tests/: test_client.py  test_host_uris.py  test_protocol.py  test_user_group.py
scripts/: analyze_small_edits.py  check-spoofed-versions.ts  ci-release-build-binaries.ts  edit_benchmark_common.py  install.ps1  (+5 more)
(+105 files in other folders)
